Lambdas with Streams examples and practices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=springboot-jpa
 
+# Informaicón basica para la coneccion a la Base de Datos
 spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Muestra los sql request en consola
 spring.jpa.show-sql=true
+
+# Activa el perfil de la persona que se encuentra trabajando, dev para desarrollo
+# o prod para no mostrar detalles delicados en logs
+spring.profiles.active=dev
+spring.jpa.properties.hibernate.format_sql=true
